Group Postgres, Redpanda, Flink under `/data` volume, handle graceful Flink shutdown, add restore ability