@@ -17,7 +17,6 @@ package com.datasqrl.cli;
 
 import com.datasqrl.config.PackageJson;
 import com.datasqrl.util.FlinkOperatorStatusChecker;
-import com.fasterxml.jackson.annotation.JsonIgnore;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import java.net.URI;
 import java.net.http.HttpClient;
@@ -38,7 +37,6 @@ import lombok.AllArgsConstructor;
 import lombok.Getter;
 import lombok.NoArgsConstructor;
 import lombok.SneakyThrows;
-import lombok.Value;
 import org.apache.flink.api.common.JobExecutionResult;
 import org.apache.flink.api.common.JobStatus;
 import org.apache.flink.configuration.Configuration;
@@ -124,7 +122,7 @@ public class DatasqrlTest {
     }
 
     try {
-      TableResult result = run.run(false);
+      TableResult result = run.run(false, false);
       // todo add file check instead of sleeping to make sure pipeline has started
       Thread.sleep(1000);
 
@@ -210,7 +208,7 @@ public class DatasqrlTest {
             Thread.sleep(1000);
           }
 
-        } catch (Exception e) {
+        } catch (Exception ignored) {
         }
       }
 
@@ -224,7 +222,7 @@ public class DatasqrlTest {
       } catch (ExecutionException e) {
         // try to catch the job failure if we can
         exceptions.add(new JobFailureException(e));
-      } catch (Exception e) {
+      } catch (Exception ignored) {
       }
 
       // 4. Run the queries against the API, finish subscriptions and snapshot the results
@@ -267,17 +265,11 @@ public class DatasqrlTest {
         }
 
         List<String> expectedSnapshotsQueries =
-            testPlan.getQueries().stream()
-                .map(f -> f.getName() + ".snapshot")
-                .collect(Collectors.toList());
+            testPlan.getQueries().stream().map(f -> f.getName() + ".snapshot").toList();
         List<String> expectedSnapshotsMutations =
-            testPlan.getMutations().stream()
-                .map(f -> f.getName() + ".snapshot")
-                .collect(Collectors.toList());
+            testPlan.getMutations().stream().map(f -> f.getName() + ".snapshot").toList();
         List<String> expectedSnapshotsSubscriptions =
-            testPlan.getSubscriptions().stream()
-                .map(f -> f.getName() + ".snapshot")
-                .collect(Collectors.toList());
+            testPlan.getSubscriptions().stream().map(f -> f.getName() + ".snapshot").toList();
         List<String> expectedSnapshots = new ArrayList<>();
         expectedSnapshots.addAll(expectedSnapshotsQueries);
         expectedSnapshots.addAll(expectedSnapshotsMutations);
@@ -295,7 +287,7 @@ public class DatasqrlTest {
         }
       }
     } finally {
-      run.stop();
+      run.cancel();
       Thread.sleep(1000); // wait for log lines to clear out
     }
 
@@ -355,14 +347,14 @@ public class DatasqrlTest {
 
     // Existing snapshot logic
     if (Files.exists(snapshotPath)) {
-      String existingSnapshot = new String(Files.readAllBytes(snapshotPath), "UTF-8");
+      String existingSnapshot = Files.readString(snapshotPath);
       if (!existingSnapshot.equals(currentResponse)) {
         exceptions.add(new SnapshotMismatchException(name, existingSnapshot, currentResponse));
       } else {
         exceptions.add(new SnapshotOkException(name));
       }
     } else {
-      Files.write(snapshotPath, currentResponse.getBytes("UTF-8"));
+      Files.writeString(snapshotPath, currentResponse);
       exceptions.add(new SnapshotCreationException(name));
     }
   }
@@ -394,21 +386,5 @@ public class DatasqrlTest {
     String name;
     String query;
     Map<String, String> headers;
-  }
-
-  @Value
-  public static class SubscriptionQuery {
-
-    @JsonIgnore String name;
-    Long id;
-    String type;
-    SubscriptionPayload payload;
-
-    @Value
-    public static class SubscriptionPayload {
-      String query;
-      Map<String, Object> variables;
-      String operationName;
-    }
   }
 }
